Fix sidebar layout issue with overflowing analyses

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -45,23 +45,24 @@
 
   .sidebar {
     grid-area: sidebar;
-    max-height: 100%;
+    display: grid;
+    grid-template-rows: 1fr auto;
     overflow: hidden;
     &_hidden {
       width: 0;
       display: none;
     }
+
     width: 25vw;
     max-width: 25vw;
-    flex-grow: 0;
 
     .selector {
       flex-grow: 0;
       width: 100%;
     }
+
     .stepper {
-      flex-grow: 1;
-      max-height: 100%;
+      overflow-y: scroll;
     }
   }
 }
